# AI-Cyanla-corporation-HR-assistant

./: CMakeLists.txt  VideoPlayerDialog.cpp  VideoPlayerDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  map.ui  pic.qrc
hr-rag-server/: final_backend.py  requirements.txt
hr-rag-server/青蓝公司知识库/FAQ/: 常见问题_一般类.txt  常见问题_福利政策.txt  常见问题_部门相关.txt
hr-rag-server/青蓝公司知识库/HR政策与制度/: 假期制度.txt  员工行为规范.txt  安全规程.txt  招聘政策.txt  绩效考核.txt  薪酬福利.txt
hr-rag-server/青蓝公司知识库/公司介绍与愿景/: 世界观.txt  公司愿景.txt
hr-rag-server/青蓝公司知识库/法律法规/: 相关劳动法规.txt
hr-rag-server/青蓝公司知识库/流程与指南/: EGO装备申请流程.txt  入职流程.txt  异常事件报告流程.txt  离职流程.txt  请假流程.txt
hr-rag-server/青蓝公司知识库/通知与公告/: 公司活动通知.txt  最新招聘通知.txt
hr-rag-server/青蓝公司知识库/部门架构与职责/: 中央本部一区.txt  中央本部二区.txt  员工档案.txt  培训部.txt  安保部.txt  情报部.txt  惩戒部.txt  控制部.txt  构筑部.txt  研发部.txt  福利部.txt  记录部.txt
src/core/: AIApiClient.cpp  AIApiClient.h  ChatStorage.cpp  ChatStorage.h  DatabaseManager.cpp  DatabaseManager.h  UserRole.h
src/views/admin/: AdminMainWidget.cpp  AdminWindow.cpp  AuditLogWidget.cpp  SystemConfigWidget.cpp  SystemConfigWidget.h  SystemStatsWidget.cpp  UserManageWidget.cpp
src/views/common/: BaseWindow.cpp  CompanyNavigationWidget.cpp  CompanyNavigationWidget.h  ExampleUsageWidget.cpp  ExampleUsageWidget.h  LoginDialog.cpp  RegisterDialog.cpp  RoleSelector.cpp  RoleSelector.h  SideMenuWidget.cpp  SideMenuWidget.h
src/views/staff/: ConsultationWidget.cpp  KnowledgeBaseWidget.cpp  ManualChatWidget.cpp  RecordWidget.cpp  StaffChatManager.cpp  StaffMainWidget.cpp  StaffWindow.cpp  StatsWidget.cpp
src/views/visitor/: AppointmentWidget.cpp  AppointmentWidget.h  ChatWidget.cpp  ChatWidget.h  FAQWidget.cpp  FAQWidget.h  MapWidget.cpp  MapWidget.h  RealChatWidget.cpp  VisitorMainWidget.cpp  VisitorMainWidget.h  VisitorWindow.cpp  VisitorWindow.h
